--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+    .tasklist {
+      margin-left: auto;
+      margin-right: auto;
+      border: 1px;
+      display: flex;
+      align-items: center; 
+      }
+    .tasklist h1 {
+        margin: 0;
+      }
+   .tasklist button {
+    margin-left: 5px;
+}
+  </style>
     <title>React App</title>
   </head>
   <body>
